# HFUT_XC_Study_Things

./: .gitignore  404.html  CLAUDE.md  LICENSE  LICENSE-ORIGINAL  README.md  gen-md.py  index.html  mkdocs.yml  search.html  sitemap.xml  update.bat  【公共课】劳动教育.html  【公共课】国家安全教育.html  【公共课】大学英语.html  【公共课】思政教材.html  【公共课】思政教育.html  【公共课】英语.html  【公共课】题库及答案.html  【大一】Java.html  【大一】大学物理.html  【大一】数据结构.html  【大一】电路与电子技术基础.html  【大一】程序设计基础.html  【大一】线性代数.html  【大一】高等数学.html  【大三】人工智能原理.html  【大三】人工智能经济学.html  【大三】操作系统.html  【大三】数字媒体技术.html  【大三】硬件综合设计.html  【大三】计算机体系结构.html  【大三】计算机图形学.html  【大三】计算机网络.html  【大二】EDA实训学习.html  【大二】Python.html  【大二】大学物理实验.html  【大二】嵌入式系统原理.html  【大二】数字逻辑.html  【大二】机器人技术.html  (+9 more)
assets/: README.md  index.html
search/: search_index.js  search_index.json
test-gh-pages/: README.md  index.html  test.py
【公共课】思政教材/: index.html  马克思主义基本原理报告.docx
【公共课】英语/: CET-6第四套模拟题.docx  CET6-2.docx  CET6-5.docx  index.html  大学英语六级模拟3.doc
【公共课】题库及答案/: index.html  《形势与政策》2023秋章节测试题答案.docx  劳动教育题库.docx  历史的三峡.md  大学生国家安全教育题库.docx  形策题库_排序 (1).docx  思政题库.html
【其他】工程图学/: 合工大历年工图A .docx  工图c.doc
【其他】网课水课/: 2025形策7题目及答案.xlsx  index.html  劳动教育答案.docx  历史的三峡.md  高校“形势与政策”课教学要点.doc
【其他】英语/: 2025春CET6-1题目.docx  CET-6 模拟题.docx  CET6-2 (1).docx  CET6-3.docx  CET6-5模拟题.docx  index.html  大学英语六级模拟1518.docx  大学英语六级真题2024年06月-(3).rtf
【大 三】人工智能经济学/: index.html
【大一】Java/: Java2实用教程第5版_答案_耿祥义.docx  README.md  index.html
【大一】大学物理/: index.html
【大一】数据结构/: README.md  index.html
【大一】程序设计基础/: README.md  (+3 more)
【大二】机器人技术/实验7球队代码/合工大机器人足球代码/CSDN/src/uva/: CMakeLists.txt  uva.h
(+897 files in other folders)
